--- a/build.xml
+++ b/build.xml
@@ -71,18 +71,17 @@
       <zipfileset src="libs/commons-cli-1.0.jar"/>
       <zipfileset src="libs/commons-codec-1.3.jar"/>
       <zipfileset src="libs/commons-collections-3.2.jar"/>
-      <zipfileset src="libs/commons-dbcp-1.2.2.jar"/>
-      <zipfileset src="libs/commons-httpclient-3.1.jar"/>
       <zipfileset src="libs/commons-io-1.3.2.jar"/>
       <zipfileset src="libs/commons-lang-2.4.jar"/>
       <zipfileset src="libs/commons-logging-1.1.1.jar"/>
-      <zipfileset src="libs/commons-net-1.4.1.jar"/>
-      <zipfileset src="libs/commons-pool-1.3.jar"/>
       <zipfileset src="libs/ehcache-1.6.0-beta5.jar"/>
       <zipfileset src="libs/mina-core-2.0.0-M4.jar"/>
+      <zipfileset src="libs/mysql-connector-java-5.0.5-bin.jar"/>
+      <zipfileset src="libs/postgresql-8.3-604.jdbc3.jar"/>
       <zipfileset src="libs/scala-library.jar"/>
       <zipfileset src="libs/slf4j-api-1.4.3.jar"/>
       <zipfileset src="libs/slf4j-jdk14-1.4.3.jar"/>
+      <zipfileset src="libs/tcache.jar"/>
       <manifest>
         <attribute name="Main-Class" value="com.base.SMemcachedApplication"/>
         <attribute name="Class-Path" value="${dist.manifest.classpath}"/>  
